* Fixed: Display errors on author archives when permalinks are *disabled*.
* Fixed: When selecting "color" social icons in the header, icons didn't display correctly in mobile menu.
* Fixed: Tooltips for social icons in mobile menu now hidden to avoid odd behavior.
* Fixed: 404 pages not displaying with same styling as all other pages, with wrapped content.
* The following functions have been deleted. These functions were simply action wrappers. For the most part, as long as you haven't (as suggested not to do) moved main template files header.php, footer.php, sidebar-right.php, or sidebar-left.php to your child theme, this shouldn't effect you.
	* `themeblvd_head()`
	* `themeblvd_before()`
	* `themeblvd_header_top()`
	* `themeblvd_header_above()`
	* `themeblvd_header_content()`
	* `themeblvd_header_menu()`
	* `themeblvd_header_after()`
	* `themeblvd_featured_start()`
	* `themeblvd_featured()`
	* `themeblvd_featured_end()`
	* `themeblvd_main_start()`
	* `themeblvd_main_top()`
	* `themeblvd_breadcrumbs()`
	* `themeblvd_before_layout()`
	* `themeblvd_main_bottom()`
	* `themeblvd_main_end()`
	* `themeblvd_featured_below_start()`
	* `themeblvd_featured_below()`
	* `themeblvd_featured_below_end()`
	* `themeblvd_footer_before()`
	* `themeblvd_footer_above()`
	* `themeblvd_footer_content()`
	* `themeblvd_footer_sub_content()`
	* `themeblvd_footer_below()`
	* `themeblvd_footer_after()`
	* `themeblvd_after()`
	* `themeblvd_header_logo()`
	* `themeblvd_header_addon()`
	* `themeblvd_header_menu_addon()`
	* `themeblvd_sidebars()`

--------------------------------------------------------------

2.0.0-beta2
-----

* Added two new theme bases; see *Appearance > Theme Base*.
* Added system to check if saved theme options match selected theme base.
* Added "Custom CSS" option utlizing code editor to all theme bases (except Developer).
* Added editor stylesheet for editing posts and pages.
* Added unique HTML ID's to sections of custom layouts like `page-slug-section-1`.